Updated translation for preferred age range

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -159,6 +159,7 @@ profile.intention=I want...
 profile.intention.meet=to meet new people
 profile.intention.date=a relationship
 profile.intention.sex=sexual intimacy
+profile.pref-age-range=Preferred age range
 profile.min-age=Minimum Age
 profile.max-age=Maximum Age
 profile.gender=Looking for...
