--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -154,6 +154,7 @@ profile.intention=I möchte...
 profile.intention.meet=neue Leute kennenlernen
 profile.intention.date=eine romantische Beziehung
 profile.intention.sex=sexuelle Intimität
+profile.pref-age-range=Bevorzugte Altersspanne
 profile.min-age=Min. Alter
 profile.max-age=Max. Alter
 profile.gender=Ich suche nach...
