--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -155,6 +155,7 @@ profile.intention=Me gustaría...
 profile.intention.meet=conocer gente nueva
 profile.intention.date=una relación romántica
 profile.intention.sex=la intimidad sexual
+profile.pref-age-range=Rango de edad preferido
 profile.min-age=Edad mínima
 profile.max-age=Edad máxima
 profile.gender=Estoy buscando...
