--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -155,6 +155,7 @@ profile.intention=Vorrei...
 profile.intention.meet=incontrare nuove persone
 profile.intention.date=una relazione romantica
 profile.intention.sex=intimità sessuale
+profile.pref-age-range=Fascia d'età preferita
 profile.min-age=Età minima
 profile.max-age=Età massima
 profile.gender=Sto cercando...
