--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -155,6 +155,7 @@ profile.intention=私は...
 profile.intention.meet=出逢う
 profile.intention.date=恋愛関係
 profile.intention.sex=せいしん
+profile.pref-age-range=希望する年齢層
 profile.min-age=最低年齢
 profile.max-age=最大年齢
 profile.gender=私が探しているのは...
