--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -155,6 +155,7 @@ profile.intention=내가 원하는...
 profile.intention.meet=새로운 사람들을 만나기 위해서는
 profile.intention.date=연애
 profile.intention.sex=성적 친밀감
+profile.pref-age-range=선호하는 연령대
 profile.min-age=최소 연령
 profile.max-age=최대 변경
 profile.gender=내가 찾고 있어요...
