--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -155,6 +155,7 @@ profile.intention=Eu gostaria...
 profile.intention.meet=conhecer novas pessoas
 profile.intention.date=uma relação romântica
 profile.intention.sex=intimidade sexual
+profile.pref-age-range=Faixa etária preferida
 profile.min-age=Idade mínima
 profile.max-age=Idade máxima
 profile.gender=Estou à procura de...
