--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -155,6 +155,7 @@ profile.intention=Я бы хотел...
 profile.intention.meet=знакомиться с новыми людьми
 profile.intention.date=романтические отношения
 profile.intention.sex=сексуальная близость
+profile.pref-age-range=Предпочтительный возрастной диапазон
 profile.min-age=минимальный возраст
 profile.max-age=максимальный возраст
 profile.gender=Я ищу...
