--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -155,6 +155,7 @@ profile.intention=我想...
 profile.intention.meet=结识新朋友
 profile.intention.date=恋爱关系
 profile.intention.sex=性爱
+profile.pref-age-range=首选年龄范围
 profile.min-age=最低年龄
 profile.max-age=最高年龄
 profile.gender=我在找...
