--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -155,6 +155,7 @@ profile.intention=Je voudrais...
 profile.intention.meet=rencontrer de nouvelles personnes
 profile.intention.date=une relation amoureuse
 profile.intention.sex=l'intimité sexuelle
+profile.pref-age-range=Fascia d'età preferita
 profile.min-age=L'âge minimum
 profile.max-age=L'âge maximum
 profile.gender=Je cherche...
