Experimental angular design. Your chat bubbles now have the preferred accent color.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -173,6 +173,9 @@ profile.audio=Custom audio
 profile.audio.info=Upload a short audio for your visitors. You can upload anything - sound effects, your voice or part of your favourite song! 
 profile.audio.delete=Delete audio?
 profile.delete-account.success=Success! Please check your mailbox and read the instructions carefully.
+profile.ui-design=UI design
+profile.ui-design.rounded=Rounded
+profile.ui-design.angular=Angular
 
 profile.js.delete-image.confirm=Delete selected image?
 
