Add translation UI design

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -168,6 +168,9 @@ profile.audio=Dein Audio
 profile.audio.info=Lade ein kurzes Audio für deine Besucher hoch. Du kannst alles hochladen - Soundeffekte, deine Stimme oder einen Teil deines Lieblingssongs! 
 profile.audio.delete=Audio löschen?
 profile.delete-account.success=Erfolg! Bitte prüfe Deine Mailbox und ließ Dir die Anweisungen sorgfältig durch.
+profile.ui-design=UI Design
+profile.ui-design.rounded=Abgerundet
+profile.ui-design.angular=Eckig
 
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
