--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -169,6 +169,9 @@ profile.audio=Audio personalizado
 profile.audio.info=Sube un audio corto para tus visitantes. Puedes subir cualquier cosa: efectos de sonido, tu voz o parte de tu canción favorita.
 profile.audio.delete=¿Borrar el audio?
 profile.delete-account.success=¡Éxito! Por favor, compruebe su buzón y lea atentamente las instrucciones.
+profile.ui-design=Diseño de la interfaz de usuario
+profile.ui-design.rounded=Redondeado
+profile.ui-design.angular=Angular
 
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
