--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -169,6 +169,9 @@ profile.audio=Audio personnalisé
 profile.audio.info=Téléchargez une courte bande audio pour vos visiteurs. Vous pouvez télécharger n'importe quoi - des effets sonores, votre voix ou une partie de votre chanson préférée ! 
 profile.audio.delete=Effacer l'audio?
 profile.delete-account.success=Succès ! Veuillez vérifier votre boîte aux lettres et lire attentivement les instructions.
+profile.ui-design=Conception de l'interface utilisateur
+profile.ui-design.rounded=Arrondi
+profile.ui-design.angular=Angulaire
 
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
