--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -169,6 +169,9 @@ profile.audio=Audio personalizzato
 profile.audio.info=Carica un breve audio per i tuoi visitatori. Potete caricare qualsiasi cosa - effetti sonori, la vostra voce o parte della vostra canzone preferita!
 profile.audio.delete=Eliminare l'audio?
 profile.delete-account.success=Successo! Controlla la tua casella di posta e leggi attentamente le istruzioni.
+profile.ui-design=Design UI
+profile.ui-design.rounded=Arrotondato
+profile.ui-design.angular=Angolare
 
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
