--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -169,6 +169,9 @@ profile.audio=カスタムオーディオ
 profile.audio.info=あなたの訪問者のための短いオーディオをアップロードします。あなたは何をアップロードすることができます - 効果音、あなたの声やお気に入りの曲の一部を
 profile.audio.delete=オーディオを削除する？
 profile.delete-account.success=成功! メールボックスをご確認の上、説明をよくお読みください。
+profile.ui-design=UIデザイン
+profile.ui-design.rounded=丸型
+profile.ui-design.angular=アンギュラー
 
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
