--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -169,6 +169,9 @@ profile.audio=Áudio personalizado
 profile.audio.info=Carregue um pequeno áudio para os seus visitantes. Pode carregar qualquer coisa - efeitos sonoros, a sua voz ou parte da sua canção favorita!
 profile.audio.delete=Apagar áudio?
 profile.delete-account.success=Sucesso! Por favor, verifique a sua caixa de correio e leia atentamente as instruções.
+profile.ui-design=Desenho UI
+profile.ui-design.rounded=Arredondado
+profile.ui-design.angular=Angular
 
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
