--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -169,6 +169,9 @@ profile.audio=Индивидуальный звук
 profile.audio.info=Загрузите короткий звук для ваших посетителей. Вы можете загрузить все, что угодно - звуковые эффекты, голос или часть любимой песни!
 profile.audio.delete=Удалить аудио?
 profile.delete-account.success=Успех! Пожалуйста, проверьте свой почтовый ящик и внимательно прочитайте инструкции.
+profile.ui-design=дизайн пользовательского интерфейса
+profile.ui-design.rounded=Округлый
+profile.ui-design.angular=Угловой
 
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 
