--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -169,6 +169,9 @@ profile.audio=定制音频
 profile.audio.info=为您的访客上传一段简短的音频。您可以上传任何东西 - 音效，您的声音或您最喜欢的歌曲的一部分! 
 profile.audio.delete=删除音频？
 profile.delete-account.success=成功了！请检查您的邮箱并仔细阅读说明。
+profile.ui-design=UI设计
+profile.ui-design.rounded=圆形的
+profile.ui-design.angular=角度
 
 profile.js.delete-image.confirm=删除所选图像？
 
