--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -169,6 +169,9 @@ profile.audio=커스텀 오디오
 profile.audio.info=방문자를 위해 짧은 오디오를 업로드하십시오. 음향 효과, 음성 또는 좋아하는 노래의 일부 등 무엇이든 업로드 할 수 있습니다!
 profile.audio.delete=오디오를 삭제 하시겠습니까?
 profile.delete-account.success=성공! 우편함을 확인하고 지침을주의 깊게 읽으십시오. 
+profile.ui-design=UI design
+profile.ui-design.rounded=Rounded
+profile.ui-design.angular=Angular
 
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
