Send email if user has confirmed their account.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -268,15 +268,14 @@ backend.mail.register.body=Hello {0}, <br> Thank you for your registration at {1
 backend.mail.password-reset.subject=Resetting your password
 backend.mail.password-reset.body=Hello {0}, <br> You have requested a password reset at {1}. Please visit the following link if you wish to reset your password: {2}/password/change/{3}
 
-backend.mail.userdata.subject=Your user data request
-backend.mail.userdata.body=Hello {0}, <br> You have requested receive a copy of your user data at {1}.
-
 backend.mail.account-delete-request.subject=Deleting your account
 backend.mail.account-delete-request.body=Hello {0}, <br> You have requested to have your account deleted at {1}. Please visit the following link if you wish to delete your account permanently: {2}/delete-account/{3}. The link will be available in 24 hours and valid for 24 hours.
 
 backend.mail.account-delete-confirm.subject=Account deletion
 backend.mail.account-delete-confirm.body=Hello {0}, <br> We have deleted your account at {1}. You can always create a new account if you change your mind. We hope to hear from you again :)
 
+backend.mail.account-confirmed.subject=Account confirmed
+backend.mail.account-confirmed.body=Hello {0}, <br> We have confirmed your account creation at {1}. Have fun meeting new people!
 
 # Text blocks 
 
