--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -264,12 +264,11 @@ backend.mail.register.body=Bonjour {0}, <br> Merci de vous inscrire auprès de {
 backend.mail.password-reset.subject=Réinitialisation de votre mot de passe
 backend.mail.password-reset.body=Bonjour {0}, <br> Vous avez demandé une réinitialisation de votre mot de passe à {1}. Visitez le lien suivant si vous souhaitez réinitialiser votre mot de passe : {2}/mot de passe/modification/{3}
 
-backend.mail.userdata.subject=Votre demande de données d'utilisateur
-backend.mail.userdata.body=Bonjour {0}, <br> Vous avez demandé une copie de vos données à {1}.
-
 backend.mail.account-delete-request.subject=Suppression de votre compte
 backend.mail.account-delete-request.body=Bonjour {0}, <br> Vous avez demandé la suppression de votre compte à {1}. Veuillez consulter le lien suivant si vous souhaitez supprimer votre compte de manière permanente : {2}/delete-account/{3}. Le lien sera disponible dans 24 heures et valable pendant 24 heures.
 
 backend.mail.account-delete-confirm.subject=Suppression de compte
 backend.mail.account-delete-confirm.body=Bonjour {0}, <br> Nous avons supprimé votre compte à {1}. Vous pouvez toujours créer un nouveau compte si vous changez d'avis. Nous espérons avoir de vos nouvelles :)
 
+backend.mail.account-confirmed.subject=Compte confirmé
+backend.mail.account-confirmed.body=Bonjour {0}, <br>Nous avons confirmé la création de votre compte auprès de {1}. Amusez-vous à rencontrer de nouvelles personnes !
