--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -264,16 +264,14 @@ backend.mail.register.body=Ciao {0}, <br> Grazie per esserti registrato con {1}.
 backend.mail.password-reset.subject=Reimpostare la password
 backend.mail.password-reset.body=Ciao {0}, <br> Hai richiesto un reset della tua password a {1}. Visitate il seguente link se volete reimpostare la vostra password: {2}/password/change/{3}
 
-backend.mail.userdata.subject=La vostra richiesta di dati utente
-backend.mail.userdata.body=Salve {0}, <br> Ha richiesto una copia dei suoi dati al {1}.
-
 backend.mail.account-delete-request.subject=Cancellare il tuo account
 backend.mail.account-delete-request.body=Ciao {0}, <br> Hai richiesto la cancellazione del tuo account a {1}. Si prega di visitare il seguente link se si desidera cancellare definitivamente il proprio account: {2}/cancella-conto/{3}. Il link sarà disponibile in 24 ore e valido per 24 ore.
 
 backend.mail.account-delete-confirm.subject=Cancellazione del conto
 backend.mail.account-delete-confirm.body=Hallo {0}, <br> Wir haben Ihr Konto bei {1} gelöscht. Wenn Sie Ihre Meinung ändern, können Sie jederzeit ein neues Konto erstellen. Wir hoffen, wieder von Ihnen zu hören :)
 
-
+backend.mail.account-confirmed.subject=Conto confermato
+backend.mail.account-confirmed.body=Ciao {0}, <br> Abbiamo confermato la creazione del tuo account con {1}. Divertiti a conoscere nuove persone!
 
 
 
