--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -259,21 +259,19 @@ backend.webpush.message.message=詳細はこちらをクリックしてくださ
 # MAIL #
 
 backend.mail.register.subject={0}での登録
-backend.mail.register.body=こんにちは{0}さん、<br> {1}に登録していただきありがとうございます。{2}/register/confirm/{3} 登録内容を確認してください。
+backend.mail.register.body=こんにちは {0} さん、<br> {1} に登録していただきありがとうございます。{2}/register/confirm/{3} 登録内容を確認してください。
 
 backend.mail.password-reset.subject=パスワードをリセットする
 backend.mail.password-reset.body=こんにちは {0}, <br> あなたは{1}でパスワードの再設定を要求しました。パスワードを再設定したい場合は、以下のリンクを参照してください：{2}/password/change/{3}。
 
-backend.mail.userdata.subject=ユーザーデータのリクエスト
-backend.mail.userdata.body=ユーザーデータのリクエストこんにちは{0}, <br> あなたは{1}のデータのコピーを要求しました。
-
 backend.mail.account-delete-request.subject=アカウントの削除
-backend.mail.account-delete-request.body=こんにちは{0}、<br> {1}のアカウントの削除依頼をされていますね。アカウントを永久に削除したい場合は、以下のリンクを参照してください：{2}/delete-account/{3}。 このリンクは24時間以内に利用可能となり、24時間有効となります。
+backend.mail.account-delete-request.body=こんにちは {0}、<br> {1} のアカウントの削除依頼をされていますね。アカウントを永久に削除したい場合は、以下のリンクを参照してください：{2}/delete-account/{3}。 このリンクは24時間以内に利用可能となり、24時間有効となります。
 
 backend.mail.account-delete-confirm.subject=アカウント削除
-backend.mail.account-delete-confirm.body=こんにちは{0}、<br> {1}のアカウントを削除しました。気が変わったらいつでも新しいアカウントを作ることができます。またのご連絡をお待ちしております :)
+backend.mail.account-delete-confirm.body=こんにちは {0}、<br> {1} のアカウントを削除しました。気が変わったらいつでも新しいアカウントを作ることができます。またのご連絡をお待ちしております :)
 
-
+backend.mail.account-confirmed.subject=アカウントの確認
+backend.mail.account-confirmed.body=こんにちは、 {0}, <br> {1} でお客様のアカウント作成を確認しました。新しい人との出会いを楽しんでください。
 
 
 
