--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -264,16 +264,14 @@ backend.mail.register.body=Olá {0}, <br> Obrigado por se registar com {1}. Por 
 backend.mail.password-reset.subject=Repor a sua palavra-passe
 backend.mail.password-reset.body=Olá {0}, <br> Pediu a redefinição da sua palavra-passe em {1}. Visite o seguinte link se quiser redefinir a sua palavra-passe: {2}/password/change/{3}
 
-backend.mail.userdata.subject=O seu pedido de dados de utilizador
-backend.mail.userdata.body=Olá {0}, <br> Pediu uma cópia dos seus dados em {1}.
-
 backend.mail.account-delete-request.subject=Apagar a sua conta
 backend.mail.account-delete-request.body=Olá {0}, <br> Pediu que a sua conta fosse apagada em {1}. Por favor, visite o seguinte link se desejar apagar a sua conta permanentemente: {2}/delete-account/{3}. A ligação estará disponível em 24 horas e será válida por 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminação de conta
 backend.mail.account-delete-confirm.body=Olá {0}, <br> Apagámos a sua conta em {1}. Pode sempre criar uma nova conta se mudar de ideias. Esperamos ouvir de si novamente :)
 
-
+backend.mail.account-confirmed.subject=Conta confirmada
+backend.mail.account-confirmed.body=Olá {0}, <br> Confirmámos a criação da sua conta com {1}. Divirta-se a conhecer novas pessoas!
 
 
 
