--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -264,16 +264,14 @@ backend.mail.register.body=Здравствуйте {0}, <br> Спасибо, ч
 backend.mail.password-reset.subject=Сброс вашего пароля
 backend.mail.password-reset.body=Здравствуйте {0}, <br> Вы запросили сброс своего пароля на {1}. Перейдите по следующей ссылке, если вы хотите сбросить свой пароль: {2}/пароль/изменение/{3}.
 
-backend.mail.userdata.subject=Ваш запрос данных пользователя
-backend.mail.userdata.body=Здравствуйте {0}, <br> Вы запросили копию своих данных по адресу {1}.
-
 backend.mail.account-delete-request.subject=Удаление аккаунта
 backend.mail.account-delete-request.body=Здравствуйте {0}, <br> Вы запросили удаление вашего аккаунта по адресу {1}. Пожалуйста, перейдите по следующей ссылке, если вы хотите навсегда удалить свой аккаунт: {2}/удаление аккаунта/{3}. Ссылка будет доступна в течение 24 часов и действительна в течение 24 часов.
 
 backend.mail.account-delete-confirm.subject=удаление аккаунта
 backend.mail.account-delete-confirm.body=Здравствуйте {0}, <br> Мы удалили ваш аккаунт по адресу {1}. Вы всегда можете создать новый аккаунт, если передумаете. Надеемся услышать от вас еще раз :)
 
-
+backend.mail.account-confirmed.subject=Подтверждённый счёт
+backend.mail.account-confirmed.body=Здравствуйте {0}, <br> Мы подтвердили создание вашего аккаунта с помощью {1}. Удачи в знакомстве с новыми людьми!
 
 
 
