--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -264,14 +264,14 @@ backend.mail.register.body=Hola, gracias por registrarse en la oficina. Por favo
 backend.mail.password-reset.subject=Restablecimiento de la contraseña
 backend.mail.password-reset.body=Hola {0}, <br> Ha solicitado un restablecimiento de su contraseña en {1}. Visite el siguiente enlace si desea restablecer su contraseña: {2}/contraseña/cambio/{3}
 
-backend.mail.userdata.subject=Su solicitud de datos de usuario
-backend.mail.userdata.body=Hola {0}, <br> Ha solicitado una copia de sus datos en {1}.
-
 backend.mail.account-delete-request.subject=Eliminación de su cuenta
 backend.mail.account-delete-request.body=Hola {0}, <br> Ha solicitado que se elimine su cuenta en {1}. Por favor, visite el siguiente enlace si desea eliminar su cuenta de forma permanente: {2}/delete-account/{3}. El enlace estará disponible en 24 horas y será válido durante 24 horas.
 
 backend.mail.account-delete-confirm.subject=Eliminación de la cuenta
 backend.mail.account-delete-confirm.body=Hola {0}, <br> Hemos borrado su cuenta en {1}. Siempre puedes crear una nueva cuenta si cambias de opinión. Esperamos tener noticias suyas de nuevo :)
+
+backend.mail.account-confirmed.subject=Cuenta confirmada
+backend.mail.account-confirmed.body=Hola {0}, <br> Hemos confirmado la creación de su cuenta con {1}. ¡Diviértete conociendo gente nueva!
 
 
 
