Add buymeacoffe donation link and hook.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -18,6 +18,8 @@ accent-color=Accent Color
 age=Age
 alerts=Alerts
 
+bmac=Buy Me a Coffee
+
 cancel=Cancel
 captcha=Captcha
 chats=Chats
@@ -103,6 +105,7 @@ delete-account.not-active=Link is not active yet. Please check the instructions 
 donate.title=Donate
 donate.notice-1=Be sure to fill in your account's email address in the message or name area.
 donate.notice-2=Use Stripe instead of PayPal because its fees are much lower.
+donate.notice-3=A small amount is deducted here, corresponding to the site operator's fee.
 donate.latest-donations=Latest Donations
 donate.largest-donations=Largest Donations
 donate.donate-now=Donate now
