--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -101,6 +101,7 @@ delete-account.not-active=El enlace aún no está activo. Por favor, revise las 
 donate.title=Donaciones
 donate.notice-1=Asegúrese de introducir la dirección de correo electrónico de su cuenta en el área de mensajes o nombres.
 donate.notice-2=Usa Stripe en lugar de PayPal ya que las tarifas son mucho más bajas.
+donate.notice-3=Aquí se deduce una pequeña cantidad, correspondiente a la tarifa del operador del sitio.
 donate.latest-donations=Donaciones recientes
 donate.largest-donations=Las mayores donaciones
 donate.donate-now=Dona ahora
