--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -101,6 +101,7 @@ delete-account.not-active=Le lien n'est pas encore actif. Veuillez revoir les in
 donate.title=Dons
 donate.notice-1=Veillez à saisir l'adresse électronique de votre compte dans la zone de message ou de nom.
 donate.notice-2=Utilisez Stripe au lieu de PayPal car les frais sont beaucoup moins élevés.
+donate.notice-3=Un petit montant est déduit ici, correspondant aux frais de l'opérateur du site.
 donate.latest-donations=Dons récents
 donate.largest-donations=Les dons les plus importants
 donate.donate-now=Faire un don
