--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -101,6 +101,7 @@ delete-account.not-active=Il link non è ancora attivo. La preghiamo di rivedere
 donate.title=Donazioni
 donate.notice-1=Assicurati di inserire l'indirizzo email del tuo account nell'area messaggi o nome.
 donate.notice-2=Utilizzate Stripe invece di PayPal perché le tariffe sono molto più basse.
+donate.notice-3=Qui viene detratto un piccolo importo, corrispondente alla tassa dell'operatore del sito.
 donate.latest-donations=Donazioni recenti
 donate.largest-donations=Le più grandi donazioni
 donate.donate-now=Dona ora
