--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -101,6 +101,7 @@ delete-account.not-active=リンクはまだ有効ではありません。お送
 donate.title=寄付金
 donate.notice-1=メッセージまたは名前の欄には、必ずアカウントからのメールアドレスを入力してください。
 donate.notice-2=手数料がはるかに低いので、PayPalの代わりにStripeを使用してください。
+donate.notice-3=ここでは、サイト運営者の手数料に相当する小額の金額が差し引かれます。
 donate.latest-donations=最近の寄付金
 donate.largest-donations=最大の寄付金
 donate.donate-now=今すぐ寄付する
