--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -101,6 +101,7 @@ delete-account.not-active=O link ainda não está activo. Por favor, reveja as i
 donate.title=Doações
 donate.notice-1=Certifique-se de introduzir o endereço de correio electrónico da sua conta na área da mensagem ou nome.
 donate.notice-2=Use Stripe em vez de PayPal, uma vez que as taxas são muito mais baixas.
+donate.notice-3=Aqui é deduzido um pequeno montante, correspondente à taxa do operador do sítio.
 donate.latest-donations=Doações recentes
 donate.largest-donations=Maiores doações
 donate.donate-now=Doar agora
