--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -101,6 +101,7 @@ delete-account.not-active=链接尚不活跃。请查看我们发送给您的说
 donate.title=捐赠
 donate.notice-1=请务必在信息或姓名区域输入您的账户的电子邮件地址。
 donate.notice-2=使用Stripe而不是PayPal，因为费用要低得多。
+donate.notice-3=这里会扣除一小笔钱，相当于网站运营商的费用。
 donate.latest-donations=最近的捐款
 donate.largest-donations=最大捐款额
 donate.donate-now=捐献
