--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -98,8 +98,9 @@ delete-account.confirm=Ich bestätige hiermit, mein Konto endgültig zu löschen
 delete-account.not-active=Link ist noch nicht aktiv. Bitte überprüfe die Anweisungen, die wir Dir gesendet haben, oder sende erneut einen Antrag zur Kontolöschung.
 
 donate.title=Spenden
-donate.notice-1=Achte darauf, die E-Mail-Adresse von deinem Konto im Nachrichten- oder Namensbereich einzutragen.
+donate.notice-1=Achte darauf, die E-Mail-Adresse von deinem Konto im Namensbereich einzutragen.
 donate.notice-2=Verwende Stripe anstelle von PayPal, da die Gebühren viel niedriger sind.
+donate.notice-3=Hier wird eine geringe Menge abgezogen, die die Gebühr des Seitenbetreibers entsprechen.
 donate.latest-donations=Neueste Spenden
 donate.largest-donations=Größte Spenden
 donate.donate-now=Jetzt spenden
