Add alert for audio when format is not supported

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -12,6 +12,7 @@ error.max-chars.generic=You have reached the maximum number of characters.
 error.password-weak=Your password needs to be at least 7 characters long and must contain characters and numbers.
 error.media.max-size-exceeded=File is too large! Maximum size is 2MB.
 error.password-no-match=Passwords do not match.
+error.format-not-supported=Format not supported.
 success.generic=Success!
 
 accent-color=Accent Color
