--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=Número máximo de caracteres alcanzados.
 error.password-weak=La contraseña debe tener al menos 7 caracteres y contener caracteres y números.
 error.password-no-match=Las contraseñas no coinciden.
 error.media.max-size-exceeded=El archivo es demasiado grande. El tamaño máximo es de 2MB.
+error.format-not-supported=El formato no es compatible.
 success.generic=¡Éxito!
 
 accent-color=Color de acento
