--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=最大文字数に到達しました。
 error.password-weak=パスワードは7文字以上で、文字と数字を含む必要があります。
 error.password-no-match=パスワードが一致しません。
 error.media.max-size-exceeded=ファイルが大きすぎます。最大サイズは2MBです。
+error.format-not-supported=フォーマットはサポートされていません。
 success.generic=成功！
 
 accent-color=アクセントカラー
