--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=최대 문자 수에 도달했습니다.
 error.password-weak=비밀번호는 7 자 이상이어야하며 문자와 숫자를 포함해야합니다.
 error.password-no-match=암호가 일치하지 않습니다.
 error.media.max-size-exceeded=파일이 너무 큽니다! 최대 크기는 2MB입니다.
+error.format-not-supported=형식이 지원되지 않습니다.
 success.generic=성공!
 
 accent-color=강조 색상
