--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=Número máximo de caracteres atingido.
 error.password-weak=A palavra-chave deve ter pelo menos 7 caracteres e conter caracteres e números.
 error.password-no-match=As palavras-passe não coincidem.
 error.media.max-size-exceeded=O ficheiro é demasiado grande! O tamanho máximo é de 2MB.
+error.format-not-supported=O formato não é suportado.
 success.generic=Sucesso!
 
 accent-color=Sotaque Cor
