--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=Максимальное количество дости
 error.password-weak=Пароль должен состоять не менее чем из 7 символов и содержать символы и цифры.
 error.password-no-match=Пароли не совпадают.
 error.media.max-size-exceeded=Файл слишком большой! Максимальный размер2MB.
+error.format-not-supported=Формат не поддерживается.
 success.generic=Успех!
 
 accent-color=Цвет акцента
