--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=达到的最大字符数。
 error.password-weak=密码必须至少有7个字符，并包含字符和数字。
 error.password-no-match=密码不匹配。
 error.media.max-size-exceeded=文件太大! 最大尺寸2MB。
+error.format-not-supported=格式不被支持。
 success.generic=成功了！
 
 accent-color=重点颜色
