--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -10,6 +10,7 @@ error.max-chars.generic=Maximale Anzahl von Zeichen erreicht.
 error.password-weak=Passwort muss mindestens 7 Zeichen lang sein und Zeichen und Zahlen enthalten.
 error.password-no-match=Die Passwörter stimmen nicht überein.
 error.media.max-size-exceeded=Datei ist zu groß! Die maximale Größe beträgt 2MB.
+error.format-not-supported=Format wird nicht unterstützt.
 success.generic=Erfolg!
 
 accent-color=Akzentfarbe
