Register and Login redesign

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -140,6 +140,7 @@ login.subtitle=Please login to proceed.
 login.forgot-password=Forgot password?
 login.oauth.google=Sign in with Google
 login.oauth.facebook=Sign in with Facebook
+login.email.sign-in=Sign in with email
 login.register=Don't have an account?
 login.js.error=Login failed, please check your credentials, complete the captcha and try again. A new confirmation email has been sent to you if your account hasn't been verified yet.
 
@@ -184,6 +185,7 @@ profile.ui-design.angular=Angular
 profile.js.delete-image.confirm=Delete selected image?
 
 register.title=Register
+register.subtitle=Create a new account
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
