--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -134,6 +134,7 @@ login.subtitle=Bitte logge dich ein, um fortzufahren.
 login.forgot-password=Passwort vergessen?
 login.oauth.google=Anmelden mit Google
 login.oauth.facebook=Anmelden mit Facebook
+login.email.sign-in=Anmelden mit E-Mail
 login.register=Noch kein Konto?
 login.js.error=Anmeldung fehlgeschlagen, bitte überprüfe die Anmeldedaten, fülle das Captcha aus und versuche es erneut. Eine neue Bestätigungs-E-Mail wurde versendet, falls dein Konto noch nicht verifiziert wurde.
 message.title=Nachrichten
@@ -177,6 +178,7 @@ profile.ui-design.angular=Eckig
 profile.js.delete-image.confirm=Ausgewähltes Bild löschen?
 
 register.title=Registrieren
+register.subtitle=Neues Konto erstellen
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
