--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -135,6 +135,7 @@ login.subtitle=Veuillez vous connecter pour continuer.
 login.forgot-password=Vous avez oublié votre mot de passe?
 login.oauth.google=Connectez-vous avec Google
 login.oauth.facebook=Connectez-vous avec Facebook
+login.email.sign-in=Se connecter avec l'e-mail
 login.register=Vous n'avez pas de compte?
 login.js.error=La connexion a échoué, veuillez vérifier les données de connexion, remplir le captcha et réessayer. Un nouveau courriel de confirmation a été envoyé si votre compte n'a pas encore été vérifié.
 message.title=Nouvelles
@@ -178,6 +179,7 @@ profile.ui-design.angular=Angulaire
 profile.js.delete-image.confirm=Supprimer l'image sélectionnée?
 
 register.title=S'inscrire
+register.subtitle=Créer un nouveau compte
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
