--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -135,6 +135,7 @@ login.subtitle=Effettuare il login per continuare.
 login.forgot-password=Hai dimenticato la tua password?
 login.oauth.google=Accedi con Google
 login.oauth.facebook=Accedi con Facebook
+login.email.sign-in=Accesso con e-mail
 login.register=Non hai un account?
 login.js.error=Login fallito, controllare i dati di accesso, compilare il captcha e riprovare. Una nuova email di conferma è stata inviata se il tuo account non è ancora stato verificato.
 message.title=Notizie
@@ -178,6 +179,7 @@ profile.ui-design.angular=Angolare
 profile.js.delete-image.confirm=Cancellare l'immagine selezionata?
 
 register.title=Registrati
+register.subtitle=Creare un nuovo account
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
