--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -135,6 +135,7 @@ login.subtitle=続けるにはログインしてください。
 login.forgot-password=パスワードをお忘れですか？
 login.oauth.google=Googleでログイン
 login.oauth.facebook=Facebookでログイン
+login.email.sign-in=Eメールでのログイン
 login.register=アカウントをお持ちでない方
 login.js.error=ログインに失敗しました、ログインデータをご確認の上、キャプチャをご記入の上、再度お試しください。アカウントがまだ確認されていない場合は、新しい確認メールが送信されています。
 message.title=ニュース
@@ -178,6 +179,7 @@ profile.ui-design.angular=アンギュラー
 profile.js.delete-image.confirm=選択した画像を削除しますか？
 
 register.title=登録
+register.subtitle=新規アカウントの作成
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
