--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -135,6 +135,7 @@ login.subtitle=계속하려면 로그인하십시오.
 login.forgot-password=비밀번호를 잊으 셨나요?
 login.oauth.google=Google로 로그인
 login.oauth.facebook=Facebook으로 로그인
+login.email.sign-in=이메일로 로그인 
 login.register=계정이 없으십니까?
 login.js.error=로그인에 실패했습니다. 로그인 세부 정보를 확인하고 보안 문자를 입력 한 후 다시 시도하십시오. 계정이 아직 확인되지 않은 경우 새 확인 이메일이 전송되었습니다.
 message.title=뉴스
@@ -178,6 +179,7 @@ profile.ui-design.angular=Angular
 profile.js.delete-image.confirm=선택한 사진을 삭제 하시겠습니까?
 
 register.title=등록하다
+register.subtitle=새로운 계정을 생성 
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
