--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -135,6 +135,7 @@ login.subtitle=Por favor, inicie sessão para continuar.
 login.forgot-password=Esqueceu-se da sua palavra-passe?
 login.oauth.google=Iniciar sessão com o Google
 login.oauth.facebook=Iniciar sessão com o Facebook
+login.email.sign-in=Login com e-mail
 login.register=Não tem uma conta?
 login.js.error=O login falhou, por favor verifique os dados de login, preencha o captcha e tente novamente. Foi enviado um novo e-mail de confirmação se a sua conta ainda não tiver sido verificada.
 message.title=Notícias
@@ -178,6 +179,7 @@ profile.ui-design.angular=Angular
 profile.js.delete-image.confirm=Apagar imagem seleccionada?
 
 register.title=Registar
+register.subtitle=Criar nova conta
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
