--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -135,6 +135,7 @@ login.subtitle=Пожалуйста, войдите, чтобы продолжи
 login.forgot-password=Забыли пароль?
 login.oauth.google=Войти в систему с помощью Google
 login.oauth.facebook=Войти в систему с помощью Facebook
+login.email.sign-in=Вход в систему с помощью электронной почты
 login.register=У вас нет счета?
 login.js.error=Вход не удался, пожалуйста, проверьте данные для входа, заполните капчу и попробуйте еще раз. Если ваш аккаунт еще не был подтвержден, было отправлено новое подтверждение по электронной почте.
 message.title=Новости
@@ -178,6 +179,7 @@ profile.ui-design.angular=Угловой
 profile.js.delete-image.confirm=Удалить выбранное изображение?
 
 register.title=Зарегистрироваться
+register.subtitle=Создать новую учетную запись
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
