--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -135,6 +135,7 @@ login.subtitle=请登录后继续。
 login.forgot-password=忘记密码了？
 login.oauth.google=用Google登录
 login.oauth.facebook=用Facebook登录
+login.email.sign-in=用电子邮件登录
 login.register=没有账户？
 login.js.error=登录失败，请检查登录数据，填写验证码后再试。如果您的账户还未被验证，我们已经发送了一封新的确认邮件。
 message.title=新闻中心
@@ -178,6 +179,7 @@ profile.ui-design.angular=角度
 profile.js.delete-image.confirm=删除所选图像？
 
 register.title=注册
+register.subtitle=创建新账户
 #register.warning=密码-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
