--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -135,6 +135,7 @@ login.subtitle=Por favor, inicie sesión para continuar.
 login.forgot-password=¿Olvidó su contraseña?
 login.oauth.google=Iniciar sesión con Google
 login.oauth.facebook=Iniciar sesión con Facebook
+login.email.sign-in=Iniciar sesión con el correo electrónico
 login.register=¿No tiene una cuenta?
 login.js.error=Falló la entrada, por favor compruebe los datos de entrada, rellene el captcha e inténtelo de nuevo. Se ha enviado un nuevo correo electrónico de confirmación si su cuenta aún no ha sido verificada.
 message.title=Noticias
@@ -178,6 +179,7 @@ profile.ui-design.angular=Angular
 profile.js.delete-image.confirm=¿Borrar la imagen seleccionada?
 
 register.title=Registrarse
+register.subtitle=Crear una nueva cuenta
 #register.warning=password-change.warning
 #register.gender.male=profile.gender.male
 #register.gender.female=profile.gender.female
