Add warning when changing intention

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=¡No se encontró ninguna descripción!
 profile.warning.no-intention=¡No se ha encontrado ninguna intención! 
 profile.warning.no-gender-preference=¡No se encontró ninguna preferencia de género!
 profile.warning.no-location=¡No se ha encontrado ningún lugar! ¡Esto se establecerá automáticamente cuando se busque a otros usuarios!
+profile.warning.intention.limit=La intención cambió. No puedes cambiarlo en las próximas 24 horas.
 
 delete-account.title=Eliminar la cuenta
 delete-account.confirm=Por la presente confirmo que mi cuenta será eliminada permanentemente.
