--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=Aucune description trouvée!
 profile.warning.no-intention=Aucune intention trouvée!
 profile.warning.no-gender-preference=Aucune préférence de genre trouvée!
 profile.warning.no-location=Aucun emplacement trouvé ! Cette option sera automatiquement activée lors de la recherche d'autres utilisateurs!
+profile.warning.intention.limit=L'intention a changé. Vous ne pouvez pas le changer dans les prochaines 24 heures.
 
 delete-account.title=Supprimer le compte
 delete-account.confirm=Je confirme par la présente que mon compte sera définitivement supprimé.
