--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=Nessuna descrizione trovata!
 profile.warning.no-intention=Nessuna intenzione trovata!
 profile.warning.no-gender-preference=Nessuna preferenza di genere trovata!
 profile.warning.no-location=Nessuna posizione trovata! Questo verrà impostato automaticamente durante la ricerca di altri utenti!
+profile.warning.intention.limit=L'intenzione è cambiata. Non si può cambiare nelle prossime 24 ore.
 
 delete-account.title=Cancellare il conto
 delete-account.confirm=Con la presente confermo che il mio account verrà definitivamente cancellato.
