--- a/src/main/resources/i18n/messages_ja.properties
+++ b/src/main/resources/i18n/messages_ja.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=記述は見つかりませんでした!
 profile.warning.no-intention=意図的なものはありません。
 profile.warning.no-gender-preference=性別の好みは見つかりませんでした
 profile.warning.no-location=場所は見つかりませんでした 他のユーザーを検索した時に自動的に設定されます!
+profile.warning.intention.limit=意図が変わった。24時間以内に変更することはできません。
 
 delete-account.title=アカウントの削除
 delete-account.confirm=私はここに私のアカウントが永久に削除されることを確認します。
