--- a/src/main/resources/i18n/messages_pt.properties
+++ b/src/main/resources/i18n/messages_pt.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=Nenhuma descrição encontrada!
 profile.warning.no-intention=Nenhuma intenção encontrada!
 profile.warning.no-gender-preference=Nenhuma preferência de género encontrada!
 profile.warning.no-location=Não foi encontrada nenhuma localização! Isto será definido automaticamente quando se procura por outros utilizadores!
+profile.warning.intention.limit=Intenção alterada. Não se pode alterá-lo nas próximas 24 horas.
 
 delete-account.title=Apagar conta
 delete-account.confirm=Confirmo que a minha conta será permanentemente apagada.
