--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=Описание не найдено!
 profile.warning.no-intention=Никаких намерений не найдено!
 profile.warning.no-gender-preference=Гендерные предпочтения не найдены!
 profile.warning.no-location=Местонахождение не найдено! Это будет установлено автоматически при поиске других пользователей!
+profile.warning.intention.limit=Намерение изменилось. Вы не сможете изменить его в ближайшие 24 часа.
 
 delete-account.title=Удалить учетную запись
 delete-account.confirm=Настоящим я подтверждаю, что моя учетная запись будет удалена навсегда.
