--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=没有找到描述!
 profile.warning.no-intention=没有发现意图！
 profile.warning.no-gender-preference=没有找到性别偏好!
 profile.warning.no-location=没有找到位置! 在搜索其他用户时，会自动设置!
+profile.warning.intention.limit=意图改变了。你不能在未来24小时内改变它。
 
 delete-account.title=删除账户
 delete-account.confirm=我在此确认，我的账户将被永久删除。
