--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -98,6 +98,7 @@ profile.warning.no-description=No description found!
 profile.warning.no-intention=No intention found!
 profile.warning.no-gender-preference=No gender preference found!
 profile.warning.no-location=No location found! It will be set automatically when you search for other users!
+profile.warning.intention.limit=Intention changed. You cannot change it for another 24 hours.
 
 delete-account.title=Delete account
 delete-account.confirm=I hereby confirm to delete this account permanently.
