--- a/src/main/resources/i18n/messages_ko.properties
+++ b/src/main/resources/i18n/messages_ko.properties
@@ -94,6 +94,7 @@ profile.warning.no-description=설명이 없습니다!
 profile.warning.no-intention=의도가 없습니다!
 profile.warning.no-gender-preference=선호하는 성별이 없습니다!
 profile.warning.no-location=위치를 찾을 수 없습니다! 다른 사용자를 찾을 때 자동으로 설정됩니다!
+profile.warning.intention.limit=의도 변경. 다음 24 시간 동안은 변경할 수 없습니다.
 
 delete-account.title=계정 삭제
 delete-account.confirm=본인은 내 계정을 영구적으로 삭제할 것임을 확인합니다.
